--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "devDependencies": {
-    "@swc/cli": "^0.1.60",
-    "@swc/core": "^1.3.31",
-    "@swc/jest": "^0.2.24",
-    "@types/jest": "^29.4.0",
-    "jest": "^29.4.1",
+    "@swc/cli": "^0.1.55",
+    "@swc/core": "^1.2.148",
+    "@swc/jest": "^0.2.20",
+    "@types/jest": "^27.4.1",
+    "jest": "^27.5.1",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "test": "jest"
+    "test": "npm run tsc -- --noEmit && jest",
+    "tsc": "tsc"
   }
 }
